{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 133,
  "lineage": "e7d437ea-677b-edbc-88e9-64e89cc2c252",
  "resources": [
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:625413607130:loadbalancer/app/my-cool-project/6143ac6fd2ef67f7",
            "arn_suffix": "app/my-cool-project/6143ac6fd2ef67f7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-cool-project-1399358342.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:625413607130:loadbalancer/app/my-cool-project/6143ac6fd2ef67f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-cool-project",
            "security_groups": [
              "sg-0aed1117722191e96"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012ba60f87755f8fd"
              },
              {
                "subnet_id": "subnet-02688c0f9999dbb36"
              },
              {
                "subnet_id": "subnet-05da006e139c19f39"
              }
            ],
            "subnets": [
              "subnet-012ba60f87755f8fd",
              "subnet-02688c0f9999dbb36",
              "subnet-05da006e139c19f39"
            ],
            "tags": {
              "Name": "my-cool-project"
            },
            "tags_all": {
              "Name": "my-cool-project"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-05185a49b6e2a2730",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.networking.module.websvr_sg.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:625413607130:listener/app/my-cool-project/6143ac6fd2ef67f7/f39dea777dfc7159",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:625413607130:targetgroup/websvr20220416074229196900000007/286440437f0b8824",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:625413607130:listener/app/my-cool-project/6143ac6fd2ef67f7/f39dea777dfc7159",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:625413607130:loadbalancer/app/my-cool-project/6143ac6fd2ef67f7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.module.alb.aws_lb.this",
            "module.autoscaling.module.alb.aws_lb_target_group.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.networking.module.websvr_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:625413607130:targetgroup/websvr20220416074229196900000007/286440437f0b8824",
            "arn_suffix": "targetgroup/websvr20220416074229196900000007/286440437f0b8824",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:625413607130:targetgroup/websvr20220416074229196900000007/286440437f0b8824",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "websvr20220416074229196900000007",
            "name_prefix": "websvr",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "websvr"
            },
            "tags_all": {
              "Name": "websvr"
            },
            "target_type": "instance",
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.autoscaling.module.alb.aws_lb.this",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.networking.module.websvr_sg.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:security-group/sg-031c4d7f15776f29f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031c4d7f15776f29f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bb547bcd80541b2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220416073732716300000006",
            "name_prefix": "terraform-",
            "owner_id": "625413607130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.websvr_sg.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:security-group/sg-0aed1117722191e96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aed1117722191e96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20220416073711359300000004",
            "name_prefix": "terraform-",
            "owner_id": "625413607130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a00b1a5ef268bde4",
            "association_id": "eipassoc-020e57b0f5d581b8e",
            "domain": "vpc",
            "id": "eipalloc-0a00b1a5ef268bde4",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0317084cf8e2b94c5",
            "private_dns": "ip-10-0-101-198.us-west-2.compute.internal",
            "private_ip": "10.0.101.198",
            "public_dns": "ec2-44-237-36-48.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.36.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-cool-project-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:internet-gateway/igw-0a46c2c343fafe543",
            "id": "igw-0a46c2c343fafe543",
            "owner_id": "625413607130",
            "tags": {
              "Name": "my-cool-project-vpc"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a00b1a5ef268bde4",
            "connectivity_type": "public",
            "id": "nat-0f3d1548c0afcb012",
            "network_interface_id": "eni-0317084cf8e2b94c5",
            "private_ip": "10.0.101.198",
            "public_ip": "44.237.36.48",
            "subnet_id": "subnet-02688c0f9999dbb36",
            "tags": {
              "Name": "my-cool-project-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0203037ed8d666ede1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f3d1548c0afcb012",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0203037ed8d666ede",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a46c2c343fafe543",
            "id": "r-rtb-0840eabe2e16e81921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0840eabe2e16e8192",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:route-table/rtb-0203037ed8d666ede",
            "id": "rtb-0203037ed8d666ede",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3d1548c0afcb012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cool-project-vpc-private"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:route-table/rtb-0840eabe2e16e8192",
            "id": "rtb-0840eabe2e16e8192",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a46c2c343fafe543",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cool-project-vpc-public"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554ccbec3b8b72d0",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-01b61a2134e6c7e60"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05681837187d37706",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-06759ed4af98d746d"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03771d5681b26385f",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-08de7ccaf1ba58a9a"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd509d3d0a04be29",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-0536fa52fbb87b99a"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc5d68b2c6158860",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-0fbd5f7c5561f1e3b"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06328db578416649c",
            "route_table_id": "rtb-0203037ed8d666ede",
            "subnet_id": "subnet-0b0afc5af1ae6ac92"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098968e90537095fa",
            "route_table_id": "rtb-0840eabe2e16e8192",
            "subnet_id": "subnet-02688c0f9999dbb36"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa44f436e6a60961",
            "route_table_id": "rtb-0840eabe2e16e8192",
            "subnet_id": "subnet-012ba60f87755f8fd"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013ba5ae74b37827d",
            "route_table_id": "rtb-0840eabe2e16e8192",
            "subnet_id": "subnet-05da006e139c19f39"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-01b61a2134e6c7e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b61a2134e6c7e60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-db-us-west-2a"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-db-us-west-2a"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-06759ed4af98d746d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06759ed4af98d746d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-db-us-west-2b"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-db-us-west-2b"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-08de7ccaf1ba58a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de7ccaf1ba58a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-db-us-west-2c"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-db-us-west-2c"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-0536fa52fbb87b99a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0536fa52fbb87b99a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-0fbd5f7c5561f1e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbd5f7c5561f1e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-0b0afc5af1ae6ac92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0afc5af1ae6ac92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-private-us-west-2c"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-02688c0f9999dbb36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02688c0f9999dbb36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-012ba60f87755f8fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012ba60f87755f8fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:subnet/subnet-05da006e139c19f39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05da006e139c19f39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-cool-project-vpc-public-us-west-2c"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc-public-us-west-2c"
            },
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:vpc/vpc-05185a49b6e2a2730",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0968840a59fcb9dc1",
            "default_route_table_id": "rtb-097ce64ff7fa06dec",
            "default_security_group_id": "sg-03d8911f8575569ce",
            "dhcp_options_id": "dopt-00c13380d24cfc0c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05185a49b6e2a2730",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097ce64ff7fa06dec",
            "owner_id": "625413607130",
            "tags": {
              "Name": "my-cool-project-vpc"
            },
            "tags_all": {
              "Name": "my-cool-project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.websvr_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:625413607130:security-group/sg-04bb547bcd80541b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bb547bcd80541b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aed1117722191e96"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220416073722153500000005",
            "name_prefix": "terraform-",
            "owner_id": "625413607130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05185a49b6e2a2730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}